--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-#DATABASE = "mongodb://localhost:27017"
-#RESEND_API = "your resend_api"
+DATABASE = "mongodb+srv://ERP_PROJECT:ERP$01$P.@cluster0.xnfk5.mongodb.net/"
+RESEND_API = "/"
 #OPENAI_API_KEY = "your open_ai api key"
 JWT_SECRET= "your_private_jwt_secret_key"
 NODE_ENV = "production"
