Changes to fix the login
Changes to fix the login

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 DATABASE = "mongodb+srv://ERP_PROJECT:ERP$01$P.@cluster0.xnfk5.mongodb.net/"
-RESEND_API = "/"
+#RESEND_API = "/"
 #OPENAI_API_KEY = "your open_ai api key"
-JWT_SECRET= "your_private_jwt_secret_key"
+JWT_SECRET= "JWT12345"
 NODE_ENV = "production"
 OPENSSL_CONF='/dev/null'
 PUBLIC_SERVER_FILE="http://localhost:8888/"
