--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "redux": "^5.0.1",
     "reselect": "^5.1.0",
     "shortid": "^2.2.16",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "@types/babel__core": "^7.1.20",
+    "typescript": "^5.0.0"
   },
   "scripts": {
     "dev": "vite",
@@ -41,6 +43,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "prettier": "3.1.0"
+    "prettier": "3.1.0",
+    "@types/babel__core": "^7.1.20",
+    "typescript": "^5.0.0"
   }
 }
